--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <body>
-        <h1>
-            YO!
-            <a href="https://www.youtube.com/watch?v=-3fjoe5Njpc" target="_blank">something cool ig</a>
-            it finally worked... yippie
-            this is for 2nd commit!
-        </h1>  
-    </body>
+    <meta charset="UTF-8">
+    <title>Muhammad Ali's Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+
+    <h1>Welcome to my website! My name is Muhammad Ali.</h1>
+
+    <p>
+        This is a simple HTML page linked with CSS for styling.</span>
+    </p>
+
+    <a href="project1.html" class="btn">
+        Go to my first mini project
+    </a>
+
+</body> 
 </html>
